# daghe-youtube-search-metadata

./: .gitignore  LICENSE
current/: PROMPT.md  README.md  daghe-module.yaml  daghe-module.yaml.example  pyproject.toml
current/config/: job.yaml  job.yaml.example
current/src/youtube_search_metadata/: archive.py  cli.py  config.py  downloader.py  git_ops.py  main.py  notifier.py  utils.py
data/: 0FuF-yE9Kqs.json  0l58x-ko4EU.json  29eDuMjsEF8.json  6GQRb4fGvtk.json  AGVTX9HQp1M.json  Aoei3IaWu0A.json  DuicCC--DLo.json  RsTeDuC6xHY.json  _Q18rDNndQk.json  eNw720sCd5Y.json  gd7BXuUQ91w.json  processed_videos.txt  r5RckLwzkfc.json
